[gd_scene load_steps=4 format=3 uid="uid://1lqq113i5miy"]

[ext_resource type="Script" uid="uid://db4drs7bw2rbq" path="res://src/scenes/levels/game.gd" id="1_e4vfg"]
[ext_resource type="Environment" uid="uid://dibclcjum5lbf" path="res://src/resources/enviroment.tres" id="3_bljm8"]
[ext_resource type="PackedScene" uid="uid://dcnpjtx4xmgiu" path="res://src/scenes/miscs/world_generation.tscn" id="4_bljm8"]

[node name="Game" type="Node3D"]
script = ExtResource("1_e4vfg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Environment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_bljm8")

[node name="WorldGeneration" parent="." instance=ExtResource("4_bljm8")]
survival_chance = 0.522
room_margin = 2
metadata/_edit_lock_ = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
